# lfs-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  rocket-init.sh
src/: audio.rs  auth.rs  id.rs  image.rs  main.rs  video.rs
src/image/: image_id.rs
