[package]
name = "rocket_lfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["mysql"] }
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rocket = "=0.5.0-rc.3"
sha2 = "0.10.7"
